--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="icon" href="img/favicon24.ico"></link>
         <style>
             #overlay {
+                cursor: default;
                 position: fixed;
                 display: none;
                 width: 100%;
@@ -24,20 +25,76 @@
                 cursor: pointer;
             }
 
+            #overlay:hover {
+                cursor: default;
+            }
+
             #tile-list-zone {
                 display: none;
-                position: fixed;
+                position: relative;
                 z-index: 50;
                 padding: 10px;
                 width: 725px;
                 max-width: 1140px;
-                height: 10%;
                 background: rgb(255, 255, 255);
                 color: #be0d0d;
+                max-height: inherit;
+                overflow-y: scroll;
+                overflow-x: clip;
+            }
+
+            .linked-tile-binding {
+                border-left: #000000 solid thick;
+                border-bottom: #000000;
+                border-image: linear-gradient(to right, #000000 10%, trasparent 90%) 100% 1;
+            }
+
+            .linked-tile-binding::after {
+                content: "";
+                position: absolute;
+                height: 3px;
+                width: 3%;
+                background: #000000;
+                transform: translate(-22%);
+            }
+
+            .full-tile-info {
+                padding-left: 20px;
+                height: 20%;
+                padding-bottom: .5em;
+                padding-top: .5em;
             }
 
             #tile-zone {
                 position: relative;
+            }
+
+            .img-in-view {
+                width: 30%;
+                object-fit: cover;
+                height: 150px;
+                cursor: zoom-in;
+            }
+
+            .img-in-view-zoom {
+                object-fit: contain;
+                width: 50%;
+                height: inherit;
+                max-height: 400px;
+                cursor: zoom-out;
+            }
+
+            .tile-viewer-text {
+                height: 150px;
+            }
+
+            .tile-viewer-text-title {
+                font-weight: bold;
+            }
+
+            .tile-viewer-text-description {
+                overflow: scroll;
+                height: 80%;
             }
 
             @media (max-width: 992px) {
@@ -48,11 +105,11 @@
 
                 #tile-list-zone {
                     display: none;
-                    position: fixed;
+                    position: relative;
                     z-index: 50;
                     padding: 10px;
-                    width: 550px;
-                    max-width: 1140px;
+                    width: 800px;
+                    /* max-width: 1140px; */
                     height: 10%;
                     background: rgb(255, 255, 255);
                     color: #be0d0d;
@@ -127,11 +184,6 @@
                 border-radius: 0 0 25px 0;
             }
 
-            .img-in-view {
-                object-fit: contain;
-                height: 100px;
-            }
-
             .txt-header-widen {
                 width: 20%;
             }
@@ -189,6 +241,13 @@
             }
         </style>
         <script>
+
+            let bingoObj = {
+                'B': [], 'I': [], 'N': [], 'G': [], 'O': [],
+                '1': [], '2': [], '3': [], '4': [], '5': []
+            }
+            const bingoLetters = ['B','I','N','G','O']
+            const colNumbers = [1,2,3,4,5]
 
             function loadTiles(events) {
                 let eventId = events.find(ele => ele.name == 'E3 2019 - Microsoft').id
@@ -278,11 +337,28 @@
 
                 let cardCode = year + event
                 console.log(`/${cardCode}.js`)
-                let { freeTile, tileDataList } = await import(`/${cardCode}.js`)                
+                let { freeTile, tileDataList } = await import(`/${cardCode}.js`)        
+                
+                setupEventListeners()
                 fillSeedBox()
                 await buildCardHtml()
+                await buildTileViewer(freeTile, tileDataList)
+                await decodeImages()
                 await buildCardContent(freeTile, tileDataList)
                 revealTiles()
+            }
+
+            function setupEventListeners() {
+                let overlayEle = document.querySelector('#overlay')
+                document.querySelector('#listTiles').addEventListener('click', event => {
+                    displayOverlay()
+                })
+                overlayEle.addEventListener('click', event => {
+                    if (event.target.id == 'main' || event.target.id == 'overlay') {
+                        console.log(event.target.id)
+                        hideOverlay()
+                    }
+                })
             }
 
             function fillSeedBox() {
@@ -293,12 +369,6 @@
                 document.querySelector('#seed-box').value = localStorage.getItem('seed')
             }
 
-            let bingoObj = {
-                'B': [], 'I': [], 'N': [], 'G': [], 'O': [],
-                '1': [], '2': [], '3': [], '4': [], '5': []
-            }
-            const bingoLetters = ['B','I','N','G','O']
-            const colNumbers = [1,2,3,4,5]
             async function buildCardHtml() {
                 colNumbers.forEach((num) => {
                     let bingoRowEle = document.createElement('div')
@@ -393,6 +463,68 @@
                     }
                 }
                 return classes
+            }
+
+            async function buildTileViewer(freeTile, tileDataList) {
+                let buildTileInView = (imgLoc, textInfo) => {
+                    let tileInViewEle = document.createElement('div')
+                    tileInViewEle.classList.add('row', 'full-tile-info')
+                    let tileInViewImg = document.createElement('img')
+                    tileInViewImg.classList.add('col-4', 'img-in-view')
+                    tileInViewImg.src = imgLoc
+                    tileInViewImg.addEventListener('click', (event) => {
+                        if (event.target.classList.contains('img-in-view')) {
+                            console.log('zoom on ' + event.target)
+                            event.target.parentElement.classList.add('justify-content-center')
+                            event.target.classList.remove('col-4', 'img-in-view')
+                            event.target.classList.add('col-12', 'img-in-view-zoom')
+                            event.target.parentElement.querySelector('.tile-viewer-text').style = 'height: fit-content'
+                        } else if (event.target.classList.contains('img-in-view-zoom')) {
+                            console.log('minimize on ' + event.target)
+                            event.target.parentElement.classList.remove('justify-content-center')
+                            event.target.classList.remove('col-12', 'img-in-view-zoom')
+                            event.target.classList.add('col-4', 'img-in-view')
+                            event.target.parentElement.querySelector('.tile-viewer-text').style = ''
+                        }
+                    })
+                    let tileInViewTextCol = document.createElement('div')
+                    tileInViewTextCol.classList.add('col-8', 'p-2', 'tile-viewer-text')
+                    let titleEle = document.createElement('div')
+                    titleEle.classList.add('tile-viewer-text-title')
+                    titleEle.innerHTML = textInfo
+                    let descriptionEle = document.createElement('div')
+                    descriptionEle.classList.add('tile-viewer-text-description')
+                    tileInViewTextCol.appendChild(titleEle)
+                    tileInViewTextCol.appendChild(descriptionEle)
+
+                    tileInViewEle.appendChild(tileInViewImg)
+                    tileInViewEle.appendChild(tileInViewTextCol)
+                    return tileInViewEle
+                }
+
+                let viewerListEle = document.querySelector("#tile-list-zone")
+                let viewerList = [].concat(freeTile).concat(tileDataList)
+                viewerList.forEach(tileItem => {
+                    if (tileItem.length > 0) {
+                        let linkedViewerListEle = document.createElement('div')
+                        linkedViewerListEle.classList.add('linked-tile-binding')
+                        tileItem.forEach(tileSubItem => {
+                            let tileViewSubEle = buildTileInView(tileSubItem.imgLoc, tileSubItem.text)
+                            linkedViewerListEle.append(tileViewSubEle)
+                        })
+                        viewerListEle.append(linkedViewerListEle)
+                    } else {
+                        let tileViewEle = buildTileInView(tileItem.imgLoc, tileItem.text)
+                        viewerListEle.append(tileViewEle)
+                    }
+                })
+            }
+
+            async function decodeImages() {
+                let viewerListEle = document.querySelector("#tile-list-zone")
+                Array.from(viewerListEle.children).forEach(async viewerEle => {
+                    await viewerEle.querySelector('img').decode()
+                })
             }
 
             function createTickElement() {
@@ -555,15 +687,14 @@
                     </div>
                 </div>
                 <div id="tile-zone">
-                        
-                </div>
-                <div>
-                    <div id="tile-list-zone">
-                        <div class="row full-tile-info">
-                            <img src="./img/bingo-24/bot.jpg">
-                            <div class="p-2">info text</div>
+                    <!--<div>
+                        <div id="tile-list-zone">
+                            <div class="row full-tile-info">
+                                <img src="./img/bingo-24/bot.jpg">
+                                <div class="p-2">info text</div>
+                            </div>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
                 <div class="row pt-3">
                     <div class="col">
@@ -572,12 +703,54 @@
                         <button id="regen" onclick="regenerateCard()">Regenerate</button>
                     </div>
                     <div class="col justify-content-end d-flex">
-                        <button id="listTiles" onclick="displayOverlay()">List tiles</span>
+                        <button id="listTiles">List tiles</span>
                     </div>
                 </div>
             </div>
-            <div id="overlay" onclick="hideOverlay()">
-                boi what up
+            <div id="overlay">
+                <div id="main" class="container widener">
+                    <div id="content" class="shell pl-5 pr-5" style="visibility: hidden;">
+                        <h2 id="event-title" class="text-center" style="visibility: hidden;">GEOFF KEIGHLEY'S THE GAME AWARDS 2024</h2>
+                        <div class="row pt-2 pb-2" style="visibility: hidden;">
+                            <div class="text-center txt-header-widen box-shadow">
+                                <span class="geoff-text">G</span>
+                            </div>
+                            <div class="text-center txt-header-widen box-shadow">
+                                <span class="geoff-text">E</span>
+                            </div>
+                            <div class="text-center txt-header-widen box-shadow">
+                                <span class="geoff-text">O</span>
+                            </div>
+                            <div class="text-center txt-header-widen box-shadow">
+                                <span class="geoff-text">F</span>
+                            </div>
+                            <div class="text-center txt-header-widen box-shadow">
+                                <span class="geoff-text">F</span>
+                            </div>
+                        </div>
+                        <div id="tile-zone" style="visibility: hidden;">
+                            <div style="visibility: visible; max-height: 825px;" class="row align-items-end pr-2 pt-2">
+                                <div class="col-4" style="visibility: visible;"></div>
+                                <div id="tile-list-zone" style="display: block;" class="col-8">
+                                    <!-- <div class="linked-tile-binding">
+                                        <div class="row full-tile-info">
+                                            <img class="img-in-view" src="./bingo-24/bot.jpg">
+                                            <div class="p-2">info text</div>
+                                        </div>
+                                        <div class="row full-tile-info">
+                                            <img class="img-in-view" src="./bingo-24/gon.jpg">
+                                            <div class="p-2">info text</div>
+                                        </div>
+                                    </div>
+                                    <div class="row full-tile-info">
+                                        <img class="img-in-view" src="./bingo-24/gon.jpg">
+                                        <div class="p-2">info text</div>
+                                    </div> -->
+                                </div>
+                            </div>
+                        </div>    
+                    </div>
+                </div>
             </div>
         </div>
     </body>
