--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
         <title>Bingo: The Game Awards 2024</title>
         <link rel="icon" href="img/favicon24.ico"></link>
         <style>
+            html {
+                position: relative;
+            }
+
             #overlay {
                 cursor: default;
-                position: fixed;
+                position: absolute;
                 display: none;
                 width: 100%;
-                height: 100%;
+                /* height: 100%; */
                 top: 0;
                 left: 0;
                 right: 0;
@@ -93,7 +97,7 @@
             }
 
             .tile-viewer-text-description {
-                overflow: scroll;
+                overflow: auto;
                 height: 80%;
             }
 
@@ -127,10 +131,6 @@
 
             body {
                 background-color: #3B1E54;
-            }
-
-            #content {
-                height: 100vh;
             }
 
             .shell {
@@ -354,8 +354,8 @@
                     displayOverlay()
                 })
                 overlayEle.addEventListener('click', event => {
-                    if (event.target.id == 'main' || event.target.id == 'overlay') {
-                        console.log(event.target.id)
+                    console.log(event.target)
+                    if (event.target.id == 'tile-list-empty' || event.target.id == 'overlay') {
                         hideOverlay()
                     }
                 })
@@ -696,7 +696,7 @@
                         </div>
                     </div>-->
                 </div>
-                <div class="row pt-3">
+                <div class="row pt-3 pb-3">
                     <div class="col">
                         <span class='pr-2'>Card Seed</span>
                         <input id="seed-box" class='mr-2' value=""></input>
@@ -707,48 +707,46 @@
                     </div>
                 </div>
             </div>
-            <div id="overlay">
-                <div id="main" class="container widener">
-                    <div id="content" class="shell pl-5 pr-5" style="visibility: hidden;">
-                        <h2 id="event-title" class="text-center" style="visibility: hidden;">GEOFF KEIGHLEY'S THE GAME AWARDS 2024</h2>
-                        <div class="row pt-2 pb-2" style="visibility: hidden;">
-                            <div class="text-center txt-header-widen box-shadow">
-                                <span class="geoff-text">G</span>
-                            </div>
-                            <div class="text-center txt-header-widen box-shadow">
-                                <span class="geoff-text">E</span>
-                            </div>
-                            <div class="text-center txt-header-widen box-shadow">
-                                <span class="geoff-text">O</span>
-                            </div>
-                            <div class="text-center txt-header-widen box-shadow">
-                                <span class="geoff-text">F</span>
-                            </div>
-                            <div class="text-center txt-header-widen box-shadow">
-                                <span class="geoff-text">F</span>
-                            </div>
-                        </div>
-                        <div id="tile-zone" style="visibility: hidden;">
-                            <div style="visibility: visible; max-height: 825px;" class="row align-items-end pr-2 pt-2">
-                                <div class="col-4" style="visibility: visible;"></div>
-                                <div id="tile-list-zone" style="display: block;" class="col-8">
-                                    <!-- <div class="linked-tile-binding">
-                                        <div class="row full-tile-info">
-                                            <img class="img-in-view" src="./bingo-24/bot.jpg">
-                                            <div class="p-2">info text</div>
-                                        </div>
-                                        <div class="row full-tile-info">
-                                            <img class="img-in-view" src="./bingo-24/gon.jpg">
-                                            <div class="p-2">info text</div>
-                                        </div>
-                                    </div>
-                                    <div class="row full-tile-info">
-                                        <img class="img-in-view" src="./bingo-24/gon.jpg">
-                                        <div class="p-2">info text</div>
-                                    </div> -->
+        </div>
+        <div id="overlay" class="container widener">
+            <div id="content" class="shell pl-5 pr-5" style="visibility: hidden;">
+                <h2 id="event-title" class="text-center" style="visibility: hidden;">GEOFF KEIGHLEY'S THE GAME AWARDS 2024</h2>
+                <div class="row pt-2 pb-2" style="visibility: hidden;">
+                    <div class="text-center txt-header-widen box-shadow">
+                        <span class="geoff-text">G</span>
+                    </div>
+                    <div class="text-center txt-header-widen box-shadow">
+                        <span class="geoff-text">E</span>
+                    </div>
+                    <div class="text-center txt-header-widen box-shadow">
+                        <span class="geoff-text">O</span>
+                    </div>
+                    <div class="text-center txt-header-widen box-shadow">
+                        <span class="geoff-text">F</span>
+                    </div>
+                    <div class="text-center txt-header-widen box-shadow">
+                        <span class="geoff-text">F</span>
+                    </div>
+                </div>
+                <div id="tile-zone" style="visibility: hidden;">
+                    <div id="tile-list-empty" style="visibility: visible; max-height: 825px;" class="row align-items-end pr-2 pt-2">
+                        <div class="col-4" style="visibility: visible;"></div>
+                        <div id="tile-list-zone" style="display: block;" class="col-8">
+                            <!-- <div class="linked-tile-binding">
+                                <div class="row full-tile-info">
+                                    <img class="img-in-view" src="./bingo-24/bot.jpg">
+                                    <div class="p-2">info text</div>
+                                </div>
+                                <div class="row full-tile-info">
+                                    <img class="img-in-view" src="./bingo-24/gon.jpg">
+                                    <div class="p-2">info text</div>
                                 </div>
                             </div>
-                        </div>    
+                            <div class="row full-tile-info">
+                                <img class="img-in-view" src="./bingo-24/gon.jpg">
+                                <div class="p-2">info text</div>
+                            </div> -->
+                        </div>
                     </div>
                 </div>
             </div>
