fixing options bug

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             crossorigin="anonymous"></script>
         <script src="/functionhider.js"></script>
         <title>Bingo: The Game Awards 2024</title>
-        <link rel="icon" href="img/favicon24.ico"></link>
+        <link rel="icon" href="favicon24.ico"></link>
         <style>
             html {
                 position: relative;
@@ -119,6 +119,10 @@
                     color: #be0d0d;
                 }
 
+            }
+
+            #content {
+                height: 100vh;
             }
 
             h2 {
